# crispy_octo_fractals

./: .gitignore  Cargo.toml  README.md
src/: libs.rs  main.rs
src/libs/: fractal.rs  globals.rs  window.rs
src/libs/fractal/: fractal_state.rs  image_tools.rs  message_packager.rs
src/libs/fractal/fractal_state/: color.rs  run_fractal.rs
src/libs/fractal/message_packager/: coordinates.rs  custom_messages.rs  message_packager.rs
src/libs/window/: fractal_window.rs
src/saved_images/: README.md
