[package]
name = "crispy_octo_fractals"
version = "0.1.0"
authors = ["On0n0k1 <stiltztinkerstein@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kik_sync_service = "0.7.3"
num = "0.3.1"
image = "0.23.13"
piston_window = "0.117.0"
