[package]
name = "crispy_octo_fractals"
version = "0.5.0"
license = "MIT"
authors = ["On0n0k1 <stiltztinkerstein@gmail.com>"]
description = "A multithreaded rendering system for customized fractals"
edition = "2018"
repository = "https://github.com/On0n0k1/crispy_octo_fractals.git"
keywords = ["concurrency", "image", "2d", "rendering", "fractal"]
categories = ["graphics", "multimedia::images", "visualization", "rendering"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kik_sync_service = "0.7.3"
num = "0.3.1"
image = "0.23.13"
piston_window = "0.117.0"
